--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 /* squadra */
 
 #squadra{
-height: 200px;
-width:200px;
-background-color: red;
+background-color: black;
+font-size: 20px;
+color: white;
 }
