--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,8 @@ background-color: black;
 font-size: 20px;
 color: white;
 }
+.tua_posizione{
+  background-color: black;
+  font-size: 20px;
+  color: white;
+}
