--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,14 @@
 #squadra{
 background-color: black;
 font-size: 20px;
+padding-top: 40px;
 color: white;
 list-style: none;
+text-align: center;
 }
 .tua_posizione{
   background-color: black;
   font-size: 20px;
+  padding-top: 20px;
   color: white;
 }
